--- a/tools/show tree/showtreeunit.lfm
+++ b/tools/show tree/showtreeunit.lfm
@@ -11,8 +11,7 @@ object Form1: TForm1
   OnCreate = FormCreate
   OnDropFiles = FormDropFiles
   OnKeyUp = FormKeyUp
-  LCLVersion = '1.6.4.0'
-  Visible = False
+  LCLVersion = '2.1.0.0'
   object PageControl1: TPageControl
     Left = 0
     Height = 420
@@ -23,7 +22,7 @@ object Form1: TForm1
   end
   object FindDialog1: TFindDialog
     OnFind = FindDialog1Find
-    left = 401
-    top = 163
+    Left = 401
+    Top = 163
   end
 end
